[tool.poetry]
name = "aiven"
version = "0.1.0"
description = ""
authors = ["Augusto F. Hack <hack.augusto@gmail.com>"]

[tool.poetry.scripts]
monmon = 'aiven'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
pylint = "^2.5.2"
flake8 = "^3.8.2"
isort = "^4.3.21"
black = "^19.10b0"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
